--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
     <div class="container">
 
-      <h1 class="title">TOTP Token Generator</h1>
+      <h1 class="title">2fa动态验证码获取</h1>
 
       <div class="field">
         <label class="label is-uppercase">Your Secret Key</label>
